--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.2",
     "gsap": "^3.9.1",
     "nuxt": "^2.15.7",
+    "primeicons": "^5.0.0",
     "primevue": "^2.9.0",
     "vuex-pagination": "^1.3.11"
   },
